apps/production/kawan-ngonser-fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: kawan-ngonser-fe-service
spec:
  selector:
    app: kawan-ngonser-fe
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
