apps/production/kawan-ngonser-fe/envoy-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kawan-ngonser-fe
  namespace: envoy
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy
      sectionName: kawan
  hostnames:
    - kawan-ngonser.dta32.my.id
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kawan-ngonser-fe-service
          namespace: prod
          port: 80
